--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-server.port=${port:8087}
+server.port=${TVP_SERVICE_PORT:8087}
 my.service.name = ${TVP_SERVICE_NAME:TVP API REST}
 my.service.code = ${TVP_SERVICE_CODE:SE006}
 my.service.authorization.url = ${SERVICE_AUTHORIZATION_URL:http://localhost:3000}
 my.service.authorization.path = ${SERVICE_AUTHORIZATION_PATH:/validation_service}
 
-
+# ===============================
+# = FEIGN NETFLIX
+# ===============================
 #CLAVE PARA QUE FUNCIONE FEIGN
 hystrix.command.default.execution.timeout.enabled = false
 
@@ -13,7 +15,7 @@ hystrix.command.default.execution.timeout.enabled = false
 # ===============================
 jwt.header = ${JWT_HEADER:Authorization}
 jwt.secret = ${JWT_SECRET:mySecret}
-jwt.expiration = 604800
-jwt.route.authentication.path = auth
-jwt.route.authentication.refresh = refresh
+jwt.expiration = ${JWT_EXPIRATION:604800}
+jwt.route.authentication.path = ${JWT_AUTH_PATH:auth}
+jwt.route.authentication.refresh = ${JWT_AUTH_REFRESH:refresh}
 
