Actualización de las variables de entorno y cambio en la forma de obtener el nombre del cliente feign.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=${TVP_SERVICE_PORT:8087}
+
 my.service.name = ${TVP_SERVICE_NAME:TVP API REST}
 my.service.code = ${TVP_SERVICE_CODE:SE006}
+my.service.authorization.name = ${SERVICE_AUTHORIZATION_NAME:auth-client}
 my.service.authorization.url = ${SERVICE_AUTHORIZATION_URL:http://localhost:3000}
 my.service.authorization.path = ${SERVICE_AUTHORIZATION_PATH:/validation_service}
 
@@ -18,4 +20,9 @@ jwt.secret = ${JWT_SECRET:mySecret}
 jwt.expiration = ${JWT_EXPIRATION:604800}
 jwt.route.authentication.path = ${JWT_AUTH_PATH:auth}
 jwt.route.authentication.refresh = ${JWT_AUTH_REFRESH:refresh}
+
+jwt.claims.name.token = ${JWT_CLAIMS_NAME_TOKEN:token}
+jwt.claims.name.api_code = ${JWT_CLAIMS_NAME_API_CODE:api_code}
+jwt.claims.name.request = ${JWT_CLAIMS_NAME_REQUEST:request}
+jwt.claims.name.url = ${JWT_CLAIMS_NAME_URL:url}
 
