Creación de variables de entorno para manejar la url y el path del servicio REST desde un archivo .yml docker (compose).

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ my.service.authorization.name = ${SERVICE_AUTHORIZATION_NAME:auth-client}
 my.service.authorization.url = ${SERVICE_AUTHORIZATION_URL:http://localhost:3000}
 my.service.authorization.path = ${SERVICE_AUTHORIZATION_PATH:/validation_service}
 
+my.service.rest.request.mapping.general.url = ${TVP_SERVICE_REST_REQUEST_MAPPING_GENERAL_URL:/api/tvp}
+my.service.rest.request.mapping.validate.path = ${TVP_SERVICE_REST_REQUEST_MAPPING_VALIDATE_PATH:/concepts_validated}
+
 # ===============================
 # = FEIGN NETFLIX
 # ===============================
@@ -25,4 +28,3 @@ jwt.claims.name.token = ${JWT_CLAIMS_NAME_TOKEN:token}
 jwt.claims.name.api_code = ${JWT_CLAIMS_NAME_API_CODE:api_code}
 jwt.claims.name.request = ${JWT_CLAIMS_NAME_REQUEST:request}
 jwt.claims.name.url = ${JWT_CLAIMS_NAME_URL:url}
-
