Cambio de la url y path del servicio de autorización.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=${TVP_SERVICE_PORT:8087}
 my.service.name = ${TVP_SERVICE_NAME:TVP API REST}
 my.service.code = ${TVP_SERVICE_CODE:SE006}
 my.service.authorization.name = ${SERVICE_AUTHORIZATION_NAME:auth-client}
-my.service.authorization.url = ${SERVICE_AUTHORIZATION_URL:http://localhost:3000}
-my.service.authorization.path = ${SERVICE_AUTHORIZATION_PATH:/validation_service}
+my.service.authorization.url = ${SERVICE_AUTHORIZATION_URL:http://localhost:3000/api/authorization}
+my.service.authorization.path = ${SERVICE_AUTHORIZATION_PATH:/token}
 
 my.service.rest.request.mapping.general.url = ${TVP_SERVICE_REST_REQUEST_MAPPING_GENERAL_URL:/api/tvp}
 my.service.rest.request.mapping.validate.path = ${TVP_SERVICE_REST_REQUEST_MAPPING_VALIDATE_PATH:/concepts_validated}
