--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port=${TVP_SERVICE_PORT:8087}
+#server.port=${TVP_SERVICE_PORT:8087} se usa cuando se levantan los servicio sin docker
+server.port=${TVP_SERVICE_PORT:8080}
 
 my.service.name = ${TVP_SERVICE_NAME:TVP API REST}
 my.service.code = ${TVP_SERVICE_CODE:SE006}
