Se agregaron variables de entorno para el control de errores.
Se eliminó carpeta robot de statics.
Cambio de url de consumo.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=${TVP_SERVICE_PORT:8080}
 my.service.name = ${TVP_SERVICE_NAME:TVP API REST}
 my.service.code = ${TVP_SERVICE_CODE:SE006}
 my.service.authorization.name = ${SERVICE_AUTHORIZATION_NAME:auth-client}
-my.service.authorization.url = ${SERVICE_AUTHORIZATION_URL:http://localhost:3000/api/authorization}
+my.service.authorization.url = ${SERVICE_AUTHORIZATION_URL:http://localhost:8080/api/authorization}
 my.service.authorization.path = ${SERVICE_AUTHORIZATION_PATH:/token}
 
 my.service.rest.request.mapping.general.url = ${TVP_SERVICE_REST_REQUEST_MAPPING_GENERAL_URL:/api/tvp}
@@ -19,8 +19,8 @@ hystrix.command.default.execution.timeout.enabled = false
 # ===============================
 # = JSON Web Token
 # ===============================
-jwt.header = ${JWT_HEADER:Authorization}
-jwt.secret = ${JWT_SECRET:mySecret}
+jwt.header = ${JWT_HEADER:DISNET_Authorization}
+jwt.secret = ${JWT_SECRET:d15n3t_53cr3t_1d}
 jwt.expiration = ${JWT_EXPIRATION:604800}
 jwt.route.authentication.path = ${JWT_AUTH_PATH:auth}
 jwt.route.authentication.refresh = ${JWT_AUTH_REFRESH:refresh}
@@ -29,3 +29,9 @@ jwt.claims.name.token = ${JWT_CLAIMS_NAME_TOKEN:token}
 jwt.claims.name.api_code = ${JWT_CLAIMS_NAME_API_CODE:api_code}
 jwt.claims.name.request = ${JWT_CLAIMS_NAME_REQUEST:request}
 jwt.claims.name.url = ${JWT_CLAIMS_NAME_URL:url}
+
+# ===============================
+# = Error control
+# ===============================
+my.service.error_code = ${TVP_SERVICE_ERROR_CODE:02}
+disnet.general.error_code = ${DISNET_GENERAL_ERROR_CODE:DNERR_}
