Actualización en el enlace del servicio.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ my.service.authorization.url = ${SERVICE_AUTHORIZATION_URL:http://localhost:8080
 my.service.authorization.path = ${SERVICE_AUTHORIZATION_PATH:/token}
 
 my.service.rest.request.mapping.general.url = ${TVP_SERVICE_REST_REQUEST_MAPPING_GENERAL_URL:/api/tvp}
-my.service.rest.request.mapping.validate.path = ${TVP_SERVICE_REST_REQUEST_MAPPING_VALIDATE_PATH:/concepts_validated}
+my.service.rest.request.mapping.validate.path = ${TVP_SERVICE_REST_REQUEST_MAPPING_VALIDATE_PATH:/validate}
 
 # ===============================
 # = FEIGN NETFLIX
