--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,12 @@ server.port=${TVP_SERVICE_PORT:8080}
 
 my.service.name = ${TVP_SERVICE_NAME:TVP API REST}
 my.service.code = ${TVP_SERVICE_CODE:SE006}
-my.service.authorization.name = ${SERVICE_AUTHORIZATION_NAME:auth-client}
-my.service.authorization.url = ${SERVICE_AUTHORIZATION_URL:http://localhost:3000/api/authorization}
-my.service.authorization.path = ${SERVICE_AUTHORIZATION_PATH:/token}
+my.service.authorization.name = ${AUTHORIZATION_SERVICE_NAME:auth-client}
+my.service.authorization.url = ${AUTHORIZATION_SERVICE_URL:http://localhost:3000/api/authorization}
+my.service.authorization.path = ${AUTHORIZATION_SERVICE_TOKEN_PATH:/token}
 
-my.service.rest.request.mapping.general.url = ${TVP_SERVICE_REST_REQUEST_MAPPING_GENERAL_URL:/api/tvp}
-my.service.rest.request.mapping.validate.path = ${TVP_SERVICE_REST_REQUEST_MAPPING_VALIDATE_PATH:/validate}
+my.service.rest.request.mapping.general.url = ${TVP_SERVICE_ROOT_PATH:/api/tvp}
+my.service.rest.request.mapping.validate.path = ${TVP_SERVICE_VALIDATE_PATH:/validate}
 
 # ===============================
 # = FEIGN NETFLIX
@@ -33,5 +33,5 @@ jwt.claims.name.url = ${JWT_CLAIMS_NAME_URL:url}
 # ===============================
 # = Error control
 # ===============================
-my.service.error_code = ${TVP_SERVICE_ERROR_CODE:02}
+my.service.error_code = ${TVP_SERVICE_ERROR_CODE:03}
 disnet.general.error_code = ${DISNET_GENERAL_ERROR_CODE:DNERR_}
