Actualización para gusrdas respuestas JSON y generar impresiones de actividad de filtrado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ my.service.authorization.path = ${AUTHORIZATION_SERVICE_TOKEN_PATH:/token}
 
 my.service.rest.request.mapping.general.url = ${TVP_SERVICE_ROOT_PATH:/api/tvp}
 my.service.rest.request.mapping.validate.path = ${TVP_SERVICE_VALIDATE_PATH:/validate}
+my.service.rest.request.mapping.validate.test.path = ${TVP_SERVICE_VALIDATE_TEST_PATH:/test}
 
 # ===============================
 # = FEIGN NETFLIX
